removed bad build option

--- a/angular.json
+++ b/angular.json
@@ -97,10 +97,7 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy",
-          "options": {
-            "cname": "Tminchew.com"
-          }
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
