--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Tminchew.github.io": {
+    "thomasminchew.com": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/tminchew.github.io",
+            "outputPath": "dist/thomasminchew.com",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "Tminchew.github.io:build:production"
+              "buildTarget": "thomasminchew.com:build:production"
             },
             "development": {
-              "buildTarget": "Tminchew.github.io:build:development"
+              "buildTarget": "thomasminchew.com:build:development"
             }
           },
           "defaultConfiguration": "development"
